# 16-833-Robot-Localization-and-Mapping

./: README.md
HW1 Particle Filter/code/: main.py  sensor_model.py
Particle Filter/code/: map_reader.py  ray_casting.cpp  ray_casting.hpp
SLAM_HW_EKF/code/: ekf_slam.py
SLAM_HW_EKF/tex/: writeup_16833_HW2_EKF.tex
SLAM_HW_ICP/: tips_for_students.md
SLAM_HW_ICP/code/: fusion.py  icp.py  main.py  preprocess.py
SLAM_HW_ICP/dataset/: .gitignore
SLAM_HW_ParticleFilter/code/: CMakeLists.txt  binder.cpp  main.py  motion_model.py  resampling.py  setup.py
SLAM_HW_SOLVERS/code/: linear.py  nonlinear.py  solvers.py
SLAM_HW_SOLVERS/tex/: writeup_16833_HW3_SOLVERS.tex
